[metadata]
name = SurvivalDatasets
#version = 0.1
author = KOLANICH
url = https://gitlab.com/KOLANICH/SurvivalDatasets
description = a unified interface for survival datasets
long_description = file: README.md
keywords = survival analysis
license = Unlicense
classifiers =
	Programming Language :: Python
	Programming Language :: Python :: 3
	Development Status :: 4 - Beta
	Environment :: Other Environment
	Intended Audience :: Developers
	Intended Audience :: Researchers
	License :: Public Domain
	License :: Public Domain :: Unlicense
	Operating System :: OS Independent
	Topic :: Software Development :: Libraries :: Python Modules
	Topic :: Science :: Data Science
	Topic :: Science :: Statistics

[options]
include_package_data = True
zip_safe = True
packages = SurvivalDatasets
setup_requires = setuptools_scm;
test_suite = tests.tests.Tests
install_requires =
	lazily @ git+https://gitlab.com/KOLANICH/lazily.py
	numpy
	pandas
	lifelines @ git+https://github.com/CamDavidsonPilon/lifelines.git
	scikit-learn
	requests @ git+https://github.com/requests/requests.git
	Cache @ git+https://gitlab.com/KOLANICH/Cache.py.git
	liac-arff @ git+https://github.com/renatopp/liac-arff.git#egg=arff
	roman

[build-system]
requires = ["setuptools", "setuptools_scm", "wheel"]
